# MFrontGallery

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL-cmake  README.md
.github/workflows/: cmake.yml  joss-draft-pdf.yml
cmake/modules/: abaqus-explicit.cmake  abaqus.cmake  ansys.cmake  aster.cmake  behaviours.cmake  calculix.cmake  castem-unix-type.cmake  castem.cmake  clang.cmake  common-compiler-flags.cmake  compiler.cmake  cyrano.cmake  diana-fea.cmake  europlexus.cmake  gcc.cmake  generalmacros.cmake  generic-behaviours.cmake  gnu-fortran-compiler.cmake  gnuplot.cmake  intel.cmake  latex.cmake  materialproperties-excel.cmake  materialproperties-fortran.cmake  materialproperties-java.cmake  materialproperties-octave.cmake  materialproperties-python.cmake  materialproperties.cmake  mfm.cmake  mfront-query.cmake  models.cmake  mtest.cmake  octave.cmake  pandoc.cmake  pathscale.cmake  tfel-check.cmake  tfel.cmake  zset.cmake
docs/web/: CMakeLists.txt  CrushedSaltKorthausBehaviour.md  OrthotropicGeneralizedMaxwell.md  SemiExplicitModifiedCamClay_OpenGeoSys2023.md  SemiExplicitModifiedCamClay_OpenGeoSys2023.tex  SemiImplicitModifiedCamClay_OpenGeoSys2020.md  SmallStrainUmatWrapper.md  best-practices.md  bibliography.bib  cmake-infrastructure.md  contributing.md  contributors.md  creating-derived-project.md  faq.md  index.md  install.md  library.bib  mfm-template.html
generic-behaviours/: CMakeLists.txt
generic-behaviours/damage/: CMakeLists.txt  FichantLaborderieDamageBehaviour.mfront  Marigo.mfront  Mazars.mfront
generic-behaviours/damage_viscoplasticity/: CMakeLists.txt  FichantLaBorderieDamageAndTorelliLoadInducedThermalStrainBehaviour.mfront
generic-behaviours/elasticity/: CMakeLists.txt  WoodOrthotropicElasticity_2022.mfront  WoodOrthotropicElasticity_2022_test1.mtest
generic-behaviours/finitestrainsinglecrystal/: CMakeLists.txt  MericCailletaudFiniteStrainSingleCrystalViscoPlasticity.mfront
generic-behaviours/heattransfer/: CMakeLists.txt  StationaryLinearHeatTransfer.mfront  StationaryNonLinearHeatTransfer.mfront  TransientLinearHeatTransfer.mfront  TransientNonLinearHeatTransfer.mfront
generic-behaviours/hyperelasticity/: CMakeLists.txt  Ogden.mfront  Signorini.mfront
generic-behaviours/hyperviscoelasticity/: CMakeLists.txt  SignoriniHyperviscoelasticity.mfront
generic-behaviours/nonlinearelasticity/: CMakeLists.txt  RambergOsgoodNonLinearElasticity.mfront
generic-behaviours/plasticity/: BarlatPerfectPlasticityYld200418p2090T3_Barlat2005.mfront  CMakeLists.txt  DruckerPerfectPlasticity_Cazacu2001.mfront  DruckerPragerCap.mfront  GreenPerfectPlasticity.mfront  Hosford1972PerfectPlasticity.mfront  HypoplasticClayModelWrapper_Masin.mfront  IsotropicLinearHardeningPlasticity.mfront  IsotropicLinearKinematicHardeningPlasticity.mfront  Iwan.mfront  JohnsonCook_s.mfront  OrthotropicDruckerPerfectPlasticityYdLin6016T4_Cazacu2001.mfront  SemiExplicitModifiedCamClay_OpenGeoSys2023.mfront  SemiExplicitModifiedCamClay_OpenGeoSys2023_Triax.mtest  SemiImplicitModifiedCamClayAbs_OpenGeoSys2023.mfront  SemiImplicitModifiedCamClayInc_OpenGeoSys2023.mfront  SemiImplicitModifiedCamClayInc_OpenGeoSys2023_Triax.mtest  SemiImplicitModifiedCamClay_OpenGeoSys2020.mfront  SemiImplicitModifiedCamClay_OpenGeoSys2020_Triax.mtest  (+3 more)
materials/: CMakeLists.txt
materials/Bentonite/behaviours/: BentoniteBehaviour.mfront  BentoniteMassin2017.mfront  CMakeLists.txt  Massin2017Behaviour-common.mfront  Triax-x_test.txt  bentonite_mtest.py  compilebehaviour.sh
materials/Bentonite/behaviours/include/: BentoniteBehaviourUtilities.hxx  generalmod.cc  generalmod.h
materials/Clay/behaviours/: HypoplasticClayModelWrapper.mfront  UmatWrapperMtest.ipynb  compilebehaviour.sh  oedometertest.ipynb  oedometertest.mtest  oedometertest.res  sheartest.ipynb
materials/Clay/behaviours/include/MFront/GenericBehaviour/: HypoplasticClayModelWrapper-generic.hxx
materials/Clay/behaviours/include/TFEL/Material/: HypoplasticClayModelWrapper.hxx  HypoplasticClayModelWrapperBehaviourData.hxx  HypoplasticClayModelWrapperIntegrationData.hxx
materials/Clay/behaviours/src/: HypoplasticClayModelWrapper-generic.cxx  HypoplasticClayModelWrapper.cxx  Makefile.mfront  targets.lst
materials/Concrete/behaviours/: CMakeLists.txt  ConcreteBurger_EDF_CIWAP_2021-test1.mtest  ConcreteBurger_EDF_CIWAP_2021-test1.ref  ConcreteBurger_EDF_CIWAP_2021-test2.mtest  ConcreteBurger_EDF_CIWAP_2021-test2.ref  ConcreteBurger_EDF_CIWAP_2021-test3.mtest  ConcreteBurger_EDF_CIWAP_2021-test3.ref  ConcreteBurger_EDF_CIWAP_2021-test4.mtest  ConcreteBurger_EDF_CIWAP_2021-test4.ref  ConcreteBurger_EDF_CIWAP_2021-test5.mtest  ConcreteBurger_EDF_CIWAP_2021-test5.ref  ConcreteBurger_EDF_CIWAP_2021.mfront  ConcreteBurger_EDF_CIWAP_2021_v2.mfront
materials/CrushedSalt/behaviours/: CMakeLists.txt  CrushedSaltKorthausBehaviour-2.mtest  CrushedSaltKorthausBehaviour-3.mtest  CrushedSaltKorthausBehaviour-4.mtest  CrushedSaltKorthausBehaviour.md  CrushedSaltKorthausBehaviour.mfront  CrushedSaltKorthausBehaviour.mtest
materials/UraniumDioxide/properties/: CMakeLists.txt  UO2_YoungModulus_Martin1989.mfront
materials/VanadiumAlloy/behaviours/: CMakeLists.txt  VanadiumAlloyViscoplasticBehaviour.mfront
materials/VanadiumAlloy/properties/: CMakeLists.txt  VanadiumAlloy_PoissonRatio_SRMA.mfront  VanadiumAlloy_ShearModulus_SRMA.mfront  VanadiumAlloy_ShearModulus_SRMA_TestCxx.cxx  VanadiumAlloy_ShearModulus_SRMA_TestFortran.f  VanadiumAlloy_ShearModulus_SRMA_TestOctave.m  VanadiumAlloy_YoungModulus_SRMA.mfront  VanadiumAlloy_YoungModulus_SRMA_TestCxx.cxx  VanadiumAlloy_YoungModulus_SRMA_TestFortran.f  VanadiumAlloy_YoungModulus_SRMA_TestJava.java.in  VanadiumAlloy_YoungModulus_SRMA_TestOctave.m  VanadiumAlloy_YoungModulus_SRMA_TestPython.py
materials/Wood/behaviours/: CMakeLists.txt  PoplarOrthotropicGeneralizedMaxwell_2021.mfront
mfront-wrappers/: CMakeLists.txt
unit-tests/mfront-wrappers/fortran/behaviours/: CMakeLists.txt  Elasticity.mfront  ElasticityRK.mfront  elasticity.f95
unit-tests/mfront-wrappers/fortran/umat/v2/: CMakeLists.txt
(+119 files in other folders)
