macro(add_material_subdirectories mat)
  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${mat}/properties/CMakeLists.txt")
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${mat}/properties")
  endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${mat}/properties/CMakeLists.txt")
  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${mat}/behaviours/CMakeLists.txt")
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${mat}/behaviours")
  endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${mat}/behaviours/CMakeLists.txt")
  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${mat}/models/CMakeLists.txt")
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${mat}/models")
  endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${mat}/models/CMakeLists.txt")
endmacro(add_material_subdirectories)

add_material_subdirectories(Bentonite)
add_material_subdirectories(VanadiumAlloy)
